# ShitRunner

./: CMakeLists.txt  README.md
inc/: IndexBuffer.h  Renderer.h  VertexBuffer.h
res/shaders/: Basic.shader  Mono.shader
scripts/: run.sh
src/: IndexBuffer.cpp  Renderer.cpp  VertexBuffer.cpp  main.cpp
